src/core/snapshots/vue_template_compiler__core__parser__test__test-26.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Dir:
            name: bind
            argument:
              Dynamic: a.b
            modifiers:
              - stop
            expression:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 15
                  line: 1
                  column: 16
                end:
                  offset: 19
                  line: 1
                  column: 20
            head_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 14
                line: 1
                column: 15
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 19
                line: 1
                column: 20
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 21
          line: 1
          column: 22
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 21
    line: 1
    column: 22

