src/core/snapshots/vue_template_compiler__core__parser__test__test-28.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Dir:
            name: bind
            argument:
              Dynamic: t
            modifiers: []
            expression:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 11
                  line: 1
                  column: 12
                end:
                  offset: 15
                  line: 1
                  column: 16
            head_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 10
                line: 1
                column: 11
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 15
                line: 1
                column: 16
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 17
          line: 1
          column: 18
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 17
    line: 1
    column: 18

