src/core/snapshots/vue_template_compiler__core__parser__test__test-3.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Dir:
            name: slot
            argument: ~
            modifiers: []
            expression:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 5
                  line: 1
                  column: 6
                end:
                  offset: 9
                  line: 1
                  column: 10
            head_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 4
                line: 1
                column: 5
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 9
                line: 1
                column: 10
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 11
          line: 1
          column: 12
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 11
    line: 1
    column: 12

