src/core/snapshots/vue_template_compiler__core__parser__test__test-5.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Dir:
            name: slot
            argument:
              Static: "@_@"
            modifiers: []
            expression:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 8
                  line: 1
                  column: 9
                end:
                  offset: 12
                  line: 1
                  column: 13
            head_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 7
                line: 1
                column: 8
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 12
                line: 1
                column: 13
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 14
          line: 1
          column: 15
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 14
    line: 1
    column: 15

