src/core/snapshots/vue_template_compiler__core__parser__test__test-8.snap
---
source: src/core/parser.rs
expression: ast

---
children:
  - Plain:
      tag_name: p
      namespace: Html
      properties:
        - Dir:
            name: bind
            argument:
              Static: ^_^
            modifiers:
              - prop
            expression:
              content:
                raw: tt
                ops:
                  bits: 10
              location:
                start:
                  offset: 13
                  line: 1
                  column: 14
                end:
                  offset: 17
                  line: 1
                  column: 18
            head_loc:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 12
                line: 1
                column: 13
            location:
              start:
                offset: 3
                line: 1
                column: 4
              end:
                offset: 17
                line: 1
                column: 18
      children: []
      location:
        start:
          offset: 0
          line: 1
          column: 1
        end:
          offset: 19
          line: 1
          column: 20
location:
  start:
    offset: 0
    line: 1
    column: 1
  end:
    offset: 19
    line: 1
    column: 20

